...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enter_name_view"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/save_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />
...
